--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,4 +1,41 @@
 {
-    "home": "home"
-
+    "home": "home",
+    "Upgrade to Premium": "Upgrade to Premium",
+    "Join us to benefit from privileges": "Join us to benefit from privileges",
+    "Privacy Policy": "Privacy Policy",
+    "Terms of Use": "Terms of Use",
+    "Subscriptions": "Subscriptions",
+    "Rate Us": "Rate Us",
+    "Features": "Features",
+    "QR Generator": "QR Generator",
+    "QR Reader": "QR Reader",
+    "Private Note": "Private Note",
+    "Private Browser": "Private Browser",
+    "Emojis": "Emojis",
+    "Stickers": "Stickers",
+    "Settings": "Settings",
+    "Generate QR Code":"Generate QR Code",
+    "QR List": "QR List",
+    "No QR code generated yet.": "No QR code generated yet.",
+    "QR Code Detail": "QR Code Detail",
+    "Share": "Share",
+    "Scanned QR code data is empty": "Scanned QR code data is empty",
+    "Read QR Code": "Read QR Code",
+    "Scanned QR Codes": "Scanned QR Codes",
+    "No scanned QR codes yet.": "No scanned QR codes yet.",
+    "QR code deleted!": "QR code deleted!",
+    "Write the Note Title here...": "Write the Note Title here...",
+    "Your grade has been recorded!": "Your grade has been recorded!",
+    "Save Note": "Save Note",
+    "Note List": "Note List",
+    "No Note generated yet.": "No Note generated yet.",
+    "Note deleted!": "Note deleted!",
+    "Note Detail": "Note Detail",
+    "Update the Note Title...": "Update the Note Title...",
+    "Update the note text...": "Update the note text...",
+    "Note updated!": "Note updated!",
+    "Update Note": "Update Note",
+    "Are you ready?": "Are you ready?",
+    "Add your second WA account now and enjoy the freedom of dual accounts!": "Add your second WA account now and enjoy the freedom of dual accounts!",
+    "Let s start": "Let s start"
 }
