--- a/assets/lang/tr.json
+++ b/assets/lang/tr.json
@@ -1,4 +1,41 @@
 {
-    "home": "home"
-
+    "home": "Ana Sayfa",
+    "Upgrade to Premium": "Premium'a Yükselt",
+    "Join us to benefit from privileges": "Ayrıcalıklardan yararlanmak için bize katılın",
+    "Privacy Policy": "Gizlilik Politikası",
+    "Terms of Use": "Kullanım Şartları",
+    "Subscriptions": "Abonelikler",
+    "Rate Us": "Bizi Değerlendir",
+    "Features": "Özellikler",
+    "QR Generator": "QR Kodu Üreteci",
+    "QR Reader": "QR Kodu Okuyucu",
+    "Private Note": "Özel Not",
+    "Private Browser": "Özel Tarayıcı",
+    "Emojis": "Emojiler",
+    "Stickers": "Çıkartmalar",
+    "Settings": "Ayarlar",
+    "Generate QR Code": "QR Kodu Oluştur",
+    "QR List": "QR Listesi",
+    "No QR code generated yet.": "Henüz QR kodu üretilmedi.",
+    "QR Code Detail": "QR Kodu Detayı",
+    "Share": "Paylaş",
+    "Scanned QR code data is empty": "Tarayıcı QR kodu verisi boş",
+    "Read QR Code": "QR Kodu Oku",
+    "Scanned QR Codes": "Tarama QR Kodları",
+    "No scanned QR codes yet.": "Henüz taranmış QR kodu yok.",
+    "QR code deleted!": "QR kodu silindi!",
+    "Write the Note Title here...": "Not başlığını buraya yazın...",
+    "Your grade has been recorded!": "Notunuz kaydedildi!",
+    "Save Note": "Notu Kaydet",
+    "Note List": "Notlar Listesi",
+    "No Note generated yet.": "Henüz not üretilmedi.",
+    "Note deleted!": "Not silindi!",
+    "Note Detail": "Not Detayı",
+    "Update the Note Title...": "Not başlığını güncelleyin...",
+    "Update the note text...": "Not metnini güncelleyin...",
+    "Note updated!": "Not güncellendi!",
+    "Update Note": "Notu Güncelle",
+    "Are you ready?": "Hazır mısınız?",
+    "Add your second WA account now and enjoy the freedom of dual accounts!": "Şimdi ikinci WA hesabınızı ekleyin ve çift hesap özgürlüğünün tadını çıkarın!",
+    "Let s start": "Hadi başlayalım"
 }
