--- a/assets/lang/de.json
+++ b/assets/lang/de.json
@@ -1,7 +1,7 @@
 {
     "home": "Startseite",
     "Upgrade to Premium": "Auf Premium upgraden",
-    "Join us to benefit from privileges": "Treten Sie uns bei, um von Privilegien zu profitieren",
+    "Join us to enjoy Premium Features and Privileges": "Treten Sie uns bei, um von Privilegien zu profitieren",
     "Privacy Policy": "Datenschutzrichtlinie",
     "Terms of Use": "Nutzungsbedingungen",
     "Subscriptions": "Abonnements",
