--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -1,7 +1,7 @@
 {
     "home": "Inicio",
     "Upgrade to Premium": "Actualizar a Premium",
-    "Join us to benefit from privileges": "Únete a nosotros para aprovechar los privilegios",
+    "Join us to enjoy Premium Features and Privileges": "Únete a nosotros para aprovechar los privilegios",
     "Privacy Policy": "Política de Privacidad",
     "Terms of Use": "Términos de Uso",
     "Subscriptions": "Suscripciones",
