--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -1,7 +1,7 @@
 {
     "home": "Accueil",
     "Upgrade to Premium": "Passer à Premium",
-    "Join us to benefit from privileges": "Rejoignez-nous pour bénéficier des privilèges",
+    "Join us to enjoy Premium Features and Privileges": "Rejoignez-nous pour bénéficier des privilèges",
     "Privacy Policy": "Politique de Confidentialité",
     "Terms of Use": "Conditions d'utilisation",
     "Subscriptions": "Abonnements",
