--- a/assets/lang/it.json
+++ b/assets/lang/it.json
@@ -1,7 +1,7 @@
 {
     "home": "Home",
     "Upgrade to Premium": "Passa a Premium",
-    "Join us to benefit from privileges": "Unisciti a noi per beneficiare dei privilegi",
+    "Join us to enjoy Premium Features and Privileges": "Unisciti a noi per beneficiare dei privilegi",
     "Privacy Policy": "Politica sulla privacy",
     "Terms of Use": "Termini di utilizzo",
     "Subscriptions": "Abbonamenti",
