--- a/assets/lang/pt.json
+++ b/assets/lang/pt.json
@@ -1,7 +1,7 @@
 {
     "home": "Início",
     "Upgrade to Premium": "Atualizar para Premium",
-    "Join us to benefit from privileges": "Junte-se a nós para aproveitar os privilégios",
+    "Join us to enjoy Premium Features and Privileges": "Junte-se a nós para aproveitar os privilégios",
     "Privacy Policy": "Política de Privacidade",
     "Terms of Use": "Termos de Uso",
     "Subscriptions": "Assinaturas",
