--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,7 +1,7 @@
 {
     "home": "home",
     "Upgrade to Premium": "Upgrade to Premium",
-    "Join us to benefit from privileges": "Join us to benefit from privileges",
+    "Join us to enjoy Premium Features and Privileges": "Join us to enjoy Premium Features and Privileges",
     "Privacy Policy": "Privacy Policy",
     "Terms of Use": "Terms of Use",
     "Subscriptions": "Subscriptions",
