--- a/assets/lang/tr.json
+++ b/assets/lang/tr.json
@@ -1,7 +1,7 @@
 {
     "home": "Ana Sayfa",
     "Upgrade to Premium": "Premium'a Yükselt",
-    "Join us to benefit from privileges": "Ayrıcalıklardan yararlanmak için bize katılın",
+    "Join us to enjoy Premium Features and Privileges": "Ayrıcalıklardan yararlanmak için bize katılın",
     "Privacy Policy": "Gizlilik Politikası",
     "Terms of Use": "Kullanım Şartları",
     "Subscriptions": "Abonelikler",
