arayüz değişimi tammalandı çeviriler yapıldı

--- a/assets/lang/de.json
+++ b/assets/lang/de.json
@@ -37,5 +37,17 @@
     "Update Note": "Notiz aktualisieren",
     "Are you ready?": "Bist du bereit?",
     "Add your second WA account now and enjoy the freedom of dual accounts!": "Fügen Sie jetzt Ihr zweites WA-Konto hinzu und genießen Sie die Freiheit von Dual-Accounts!",
-    "Let s start": "Lass uns anfangen"
+    "Let s start": "Lass uns anfangen",
+    "Login to your Web Messanger second account with Wachat": "Login to your Web Messanger second account with Wachat",
+    "Open Web Messenger": "Web Messanger öffnen",
+    "FEATURES": "Funktionen",
+    "Generate QR code": "QR-Code erstellen",
+    "QR Scanner": "QR-Code lesen",
+    "Scan your QR codes": "QR-Codes scannen",
+    "Keep a secret note": "Geheimer Notiz",
+    "Use Incognito Browser": "Privater Browser",
+    "More Emoji": "Mehr Emojis",
+    "Sticker": "Sticker",
+    "More Sticker": "Mehr Sticker",
+    "Home": "Startseite"
 }
