--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -37,5 +37,20 @@
     "Update Note": "Update Note",
     "Are you ready?": "Are you ready?",
     "Add your second WA account now and enjoy the freedom of dual accounts!": "Add your second WA account now and enjoy the freedom of dual accounts!",
-    "Let s start": "Let s start"
+    "Let s start": "Let s start",
+    "Login to your Web Messanger second account with Wachat": "Login to your Web Messanger second account with Wachat",
+    "Open Web Messenger": "Open Web Messenger",
+    "FEATURES": "FEATURES",
+    "Generate QR code": "Generate QR code",
+    "QR Scanner": "QR Scanner",
+        
+    "Scan your QR codes": "Scan your QR codes",
+
+    "Keep a secret note": "Keep a secret note",
+    "Use Incognito Browser": "Use Incognito Browser",
+    
+    "More Emoji": "More Emoji",
+    "Sticker": "Sticker",
+    "More Sticker": "More Sticker",
+    "Home": "Home"
 }
