--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -37,5 +37,17 @@
     "Update Note": "Actualizar Nota",
     "Are you ready?": "¿Estás listo?",
     "Add your second WA account now and enjoy the freedom of dual accounts!": "¡Añade tu segunda cuenta de WA ahora y disfruta de la libertad de las cuentas duales!",
-    "Let s start": "Empecemos"
+    "Let s start": "Empecemos",
+    "Login to your Web Messanger second account with Wachat": "Inicia sesión en tu segunda cuenta de Web Messanger con Wachat",
+    "Open Web Messenger": "Abrir Web Messanger",
+    "FEATURES": "FUNCIONES",
+    "Generate QR code": "Generar Código QR",
+    "QR Scanner": "Lector de QR",
+    "Scan your QR codes": "Escanea tus códigos QR",
+    "Keep a secret note": "Mantén una nota secreta",
+    "Use Incognito Browser": "Navegar en modo Incógnito",
+    "More Emoji": "Más Emojis",
+    "Sticker": "Pegatina",
+    "More Sticker": "Más Pegatinas",
+    "Home": "Inicio"
 }
