--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -37,5 +37,17 @@
     "Update Note": "Mettre à jour la Note",
     "Are you ready?": "Êtes-vous prêt ?",
     "Add your second WA account now and enjoy the freedom of dual accounts!": "Ajoutez maintenant votre second compte WA et profitez de la liberté des comptes doubles !",
-    "Let s start": "Commençons"
+    "Let s start": "Commençons",
+    "Login to your Web Messanger second account with Wachat": "Connectez-vous à votre second compte Web Messanger avec Wachat",
+    "Open Web Messenger": "Ouvrir Web Messanger",
+    "FEATURES": "Fonctionnalités",
+    "Generate QR code": "Générer un Code QR",
+    "QR Scanner": "Scanner un Code QR",
+    "Scan your QR codes": "Scanner vos codes QR",
+    "Keep a secret note": "Garder une note secrète",
+    "Use Incognito Browser": "Utiliser le navigateur privé",
+    "More Emoji": "Plus d'Emojis",
+    "Sticker": "Autocollant",
+    "More Sticker": "Plus d'Autocollants",
+    "Home": "Accueil"
 }
