--- a/assets/lang/it.json
+++ b/assets/lang/it.json
@@ -37,5 +37,17 @@
     "Update Note": "Aggiorna Nota",
     "Are you ready?": "Sei pronto?",
     "Add your second WA account now and enjoy the freedom of dual accounts!": "Aggiungi il tuo secondo account WA ora e goditi la libertà dei conti doppi!",
-    "Let s start": "Iniziamo"
+    "Let s start": "Iniziamo",
+    "Login to your Web Messanger second account with Wachat": "Login to your Web Messanger second account with Wachat",
+    "Open Web Messenger": "Apri Web Messanger",
+    "FEATURES": "FUNZIONALITÀ",
+    "Generate QR code": "Genera Codice QR",
+    "QR Scanner": "Scanner Codice QR",
+    "Scan your QR codes": "Scansiona i tuoi codici QR",
+    "Keep a secret note": "Mantieni una nota segreta",
+    "Use Incognito Browser": "Usa Browser privato",
+    "More Emoji": "Più Emoticon",
+    "Sticker": "Adesivo",
+    "More Sticker": "Più Adesivi",
+    "Home": "Home"
 }
