--- a/assets/lang/pt.json
+++ b/assets/lang/pt.json
@@ -37,5 +37,17 @@
     "Update Note": "Atualizar Nota",
     "Are you ready?": "Você está pronto?",
     "Add your second WA account now and enjoy the freedom of dual accounts!": "Adicione sua segunda conta WA agora e aproveite a liberdade das contas duplas!",
-    "Let s start": "Vamos começar"
+    "Let s start": "Vamos começar",
+    "Login to your Web Messanger second account with Wachat": "Login to your Web Messanger second account with Wachat",
+    "Open Web Messenger": "Abrir Web Messanger",
+    "FEATURES": "RECURSOS",
+    "Generate QR code": "Gerar QR Code",
+    "QR Scanner": "Leitor de QR",
+    "Scan your QR codes": "Escaneie seus códigos QR",
+    "Keep a secret note": "Mantenha uma nota secreta",
+    "Use Incognito Browser": "Navegue em modo Incógnito",
+    "More Emoji": "Mais Emojis",
+    "Sticker": "Adesivo",
+    "More Sticker": "Mais Adesivos",
+    "Home": "Início"
 }
