--- a/assets/lang/tr.json
+++ b/assets/lang/tr.json
@@ -37,5 +37,17 @@
     "Update Note": "Notu Güncelle",
     "Are you ready?": "Hazır mısınız?",
     "Add your second WA account now and enjoy the freedom of dual accounts!": "Şimdi ikinci WA hesabınızı ekleyin ve çift hesap özgürlüğünün tadını çıkarın!",
-    "Let s start": "Hadi başlayalım"
+    "Let s start": "Hadi başlayalım",
+    "Login to your Web Messanger second account with Wachat": "İkinci Web Messanger hesabınıza Wachat ile giriş yapın",
+    "Open Web Messenger": "Web Messanger'ı Aç",
+    "FEATURES": "Özellikler",
+    "Generate QR code": "QR Kodu Oluştur",
+    "QR Scanner": "QR Kodu Tarama",
+    "Scan your QR codes": "QR Kodlarınızı Tarayın",
+    "Keep a secret note": "Gizli Not Oluştur",
+    "Use Incognito Browser": "Gizli Tarayıcı Kullan",
+    "More Emoji": "Daha Fazla Emoji",
+    "Sticker": "Çıkartma",
+    "More Sticker": "Daha Fazla Çıkartma",
+    "Home": "Ana Sayfa"
 }
